--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
 </head>
 
 <body>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Mazing -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6463298449364911"
+     data-ad-slot="5149015184"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
-  <canvas id="myCanvas" width="500px" height="500px"> <!-- ÷åëîâåê áóäóøèé -->
+  <canvas id="myCanvas" width="500px" height="500px"> <!-- Ã·Ã¥Ã«Ã®Ã¢Ã¥Ãª Ã¡Ã³Ã¤Ã³Ã¸Ã¨Ã© -->
     </canvas>
-    <canvas id="mazeCanvas" width="5000px" height="5000px" style="display: none"> <!-- ÷åëîâåê áóäóøèé -->
+    <canvas id="mazeCanvas" width="5000px" height="5000px" style="display: none"> <!-- Ã·Ã¥Ã«Ã®Ã¢Ã¥Ãª Ã¡Ã³Ã¤Ã³Ã¸Ã¨Ã© -->
     </canvas>
 
   <script type="text/javascript" src="js/queue.js"> </script>
