--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
 </head>
 
 <body>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Mazing -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-6463298449364911"
-     data-ad-slot="5149015184"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
-  <canvas id="myCanvas" width="500px" height="500px"> <!-- ÷åëîâåê áóäóøèé -->
+<script language="JavaScript"> 
+  window.location.href = "http://dreamniker.esy.es/MazeNew/"
+</script>
+<!--
+
+  <canvas id="myCanvas" width="500px" height="500px"> 
     </canvas>
-    <canvas id="mazeCanvas" width="5000px" height="5000px" style="display: none"> <!-- ÷åëîâåê áóäóøèé -->
+    <canvas id="mazeCanvas" width="5000px" height="5000px" style="display: none">
     </canvas>
 
   <script type="text/javascript" src="js/queue.js"> </script>
@@ -29,5 +25,7 @@
   <script type="text/javascript" src="js/game_manager.js"> </script>
 
   <script type="text/javascript" src="js/input-manager.js"> </script>
+-->
+  
 </body>
 </html>
