--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <script language="JavaScript"> 
-  window.location.href = "http://dreamniker.esy.es/test/"
+  window.location.href = "http://dreamniker.esy.es/tests/"
 </script>
 <!--
 
