--- a/index.html
+++ b/index.html
@@ -1,31 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="windows-1251">
-  <title>my game</title>
-<link href="css/styles.css" rel="stylesheet" type="text/css">
+  <title>Hi!</title>
 </head>
 
 <body>
-
-<script language="JavaScript"> 
- // window.location.href = "http://dreamniker.esy.es/tests/"
-</script>
-<!--
-
-  <canvas id="myCanvas" width="500px" height="500px"> 
-    </canvas>
-    <canvas id="mazeCanvas" width="5000px" height="5000px" style="display: none">
-    </canvas>
-
-  <script type="text/javascript" src="js/queue.js"> </script>
-  <script type="text/javascript" src="js/assets.js"> </script>
-  <script type="text/javascript" src="js/maze.js"> </script>
-  <script type="text/javascript" src="js/person.js"> </script>
-  <script type="text/javascript" src="js/game_manager.js"> </script>
-
-  <script type="text/javascript" src="js/input-manager.js"> </script>
--->
-  
+ Hi!
 </body>
 </html>
