сменил тему фэйсбука на темную

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- Put this div tag to the place, where the Comments block will be -->
 <div id="vk_comments"></div>
-<div class="fb-comments" data-href="http://dreamniker.github.io" data-width="665" data-numposts="5"></div>
+<div class="fb-comments" data-colorscheme="dark" data-href="http://dreamniker.github.io" data-width="665" data-numposts="5"></div>
 
 
 <script type="text/javascript">
