--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html lang="ru">
 <head>
   <title>Hi!</title>
+
+    <link rel="stylesheet" href="css/likely.css">
+    <script src="js/likely.js"></script>
 </head>
 
 <body>
  Hi!
+ <div id="likely" class="likely likely-light">
+    <div class="twitter"></div>
+    <div class="facebook"></div>
+    <div class="vkontakte"></div>
+    <div class="gplus"></div>
+    <div class="telegram"></div>
+    <div class="odnoklassniki"></div>
+    <div class="pinterest" data-media="i/pinnable.jpg"></div>
+</div>
  <!-- Put this script tag to the <head> of your page -->
 <script type="text/javascript" src="//vk.com/js/api/openapi.js?139"></script>
 
